src/main/java/com/example/app/error/exception/AppException.java
package com.example.app.error.exception;

public class AppException extends RuntimeException {
    public AppException(String message) {
        super(message);
    }
}
